--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fast-glob": "3.3.3",
     "postcss": "8.5.6",
     "postcss-preset-mantine": "1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "19.2.4",
     "react-chartjs-2": "5.3.1",
     "react-dom": "19.2.4",
