--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,5 +106,19 @@ services:
       timeout: 10s
       retries: 5
 
+  medplum-app:
+    image: medplum/medplum-app:latest
+    restart: unless-stopped
+    depends_on:
+      medplum-server:
+        condition: service_healthy
+    ports:
+      - '3005:3000'  # avoid collision with chart-demo dev server (defaults to 3000)
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:3000']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   medplum-postgres-data:
