--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "backend": "docker compose up",
     "build": "pnpm run build:bots && tsc && vite build",
-    "build:bots": "pnpm run clean && tsc --project tsconfig-bots.json && node --no-warnings esbuild-script.mjs && tsx src/scripts/deploy-bots.ts",
-    "clean": "rimraf dist",
+    "build:bots": "pnpm run clean && tsc --project tsconfig-bots.json && node --no-warnings esbuild-script.mjs && node src/scripts/deploy-bots.mjs",
+    "clean": "node -e \"require('node:fs').rmSync('dist', { recursive: true, force: true })\"",
     "dev": "vite",
+    "typecheck": "tsc --noEmit && tsc --project tsconfig-bots.json --noEmit",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "preview": "vite preview",
@@ -24,11 +25,8 @@
     "@mantine/core": "8.3.15",
     "@mantine/hooks": "8.3.15",
     "@mantine/notifications": "8.3.15",
-    "@mantine/spotlight": "^8.3.15",
-    "@medplum/bot-layer": "5.0.14",
     "@medplum/core": "5.0.14",
     "@medplum/definitions": "5.0.14",
-    "@medplum/eslint-config": "5.0.14",
     "@medplum/fhirtypes": "5.0.14",
     "@medplum/mock": "5.0.14",
     "@medplum/react": "5.0.14",
@@ -36,25 +34,23 @@
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "@typescript-eslint/eslint-plugin": "8.56.0",
+    "@typescript-eslint/parser": "8.56.0",
     "@vitejs/plugin-react": "5.1.4",
-    "chart.js": "4.5.1",
+    "eslint": "10.0.0",
     "esbuild": "0.27.3",
-    "fast-glob": "3.3.3",
     "postcss": "8.5.6",
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "19.2.4",
-    "react-chartjs-2": "5.3.1",
     "react-dom": "19.2.4",
     "react-router": "7.13.0",
-    "rimraf": "6.1.3",
-    "tsx": "4.21.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
     "vitest": "4.0.18"
   },
   "packageManager": "pnpm@10.29.3+sha512.498e1fb4cca5aa06c1dcf2611e6fafc50972ffe7189998c409e90de74566444298ffe43e6cd2acdc775ba1aa7cc5e092a8b7054c811ba8c5770f84693d33d2dc",
   "engines": {
-    "node": "^22.18.0 || >=24.2.0"
+    "node": ">=25.0.0"
   }
 }
