--- a/.env.defaults
+++ b/.env.defaults
@@ -1,3 +1,3 @@
 # Configuration for local development server
 MEDPLUM_BASE_URL="http://localhost:8103"
-GOOGLE_CLIENT_ID="397236612778-c0b5tnjv98frbo1tfuuha5vkme3cmq4s.apps.googleusercontent.com"
+MEDPLUM_CLIENT_ID="9f8f3f84-0fbe-4f8e-a7f4-7f6a26b7f8aa"
