--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,6 +80,10 @@ services:
 
       # Local-only convenience. Tighten later.
       MEDPLUM_ALLOWED_ORIGINS: 'http://localhost:3000,http://localhost:3005,http://localhost:5173'
+      MEDPLUM_DEFAULT_SUPER_ADMIN_EMAIL: 'bypass@bypass.com'
+      MEDPLUM_DEFAULT_SUPER_ADMIN_PASSWORD: 'bypass123'
+      MEDPLUM_REGISTER_ENABLED: 'false'
+      MEDPLUM_DEFAULT_OAUTH_CLIENTS: '[{"resourceType":"ClientApplication","id":"9f8f3f84-0fbe-4f8e-a7f4-7f6a26b7f8aa","name":"Bypass Local Client","redirectUris":["http://localhost:3000/","http://localhost:5173/"],"pkceOptional":true}]'
 
       MEDPLUM_INTROSPECTION_ENABLED: 'true'
       MEDPLUM_VM_CONTEXT_BOTS_ENABLED: 'true'
