--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build:bots": "pnpm run clean && tsc --project tsconfig-bots.json && node --no-warnings esbuild-script.mjs && node src/scripts/deploy-bots.mjs",
     "clean": "node -e \"require('node:fs').rmSync('dist', { recursive: true, force: true })\"",
     "dev": "vite",
+    "format": "prettier --write \"{src,.github}/**/*.{ts,tsx,js,mjs,cjs,json,css,yml,yaml}\" package.json pnpm-workspace.yaml docker-compose.yml esbuild-script.mjs eslint.config.cjs postcss.config.mjs tsconfig.json tsconfig-bots.json vercel.json",
+    "format:check": "prettier --check \"{src,.github}/**/*.{ts,tsx,js,mjs,cjs,json,css,yml,yaml}\" package.json pnpm-workspace.yaml docker-compose.yml esbuild-script.mjs eslint.config.cjs postcss.config.mjs tsconfig.json tsconfig-bots.json vercel.json",
     "typecheck": "tsc --noEmit && tsc --project tsconfig-bots.json --noEmit",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
@@ -42,6 +44,7 @@
     "postcss": "8.5.6",
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.6.2",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-router": "7.13.0",
