--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "typecheck": "tsc --noEmit && tsc --project tsconfig-bots.json --noEmit",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
+    "prepare": "husky",
     "preview": "vite preview",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage"
+  },
+  "lint-staged": {
+    "*": "prettier --ignore-unknown --write"
   },
   "prettier": {
     "printWidth": 120,
@@ -41,6 +45,8 @@
     "@vitejs/plugin-react": "5.1.4",
     "eslint": "10.0.0",
     "esbuild": "0.27.3",
+    "husky": "9.1.7",
+    "lint-staged": "16.2.7",
     "postcss": "8.5.6",
     "postcss-preset-mantine": "1.18.0",
     "postcss-simple-vars": "^7.0.1",
